# PassVault

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  modules.rs
src/assets/: common_patterns.txt  keyboard_seqs.txt
src/modules/: evaluator.rs  generator.rs  strengthener.rs
src/ui/: app.rs  mod.rs
src/ui/screens/: generator.rs  input.rs  main_menu.rs  mod.rs  result.rs  theme.rs
