[package]
name = "passvault"
version = "1.0.0"
edition = "2024"
description = "A TUI password vault"
authors = ["Vincent Matthew"]
license = "MIT"
repository = "https://github.com/viincnt/PassVault"
readme = "README.md"

[dependencies]
rand = "0.8"
ratatui = "0.29"
tui-big-text = "0.7"
crossterm = "0.28"
arboard = "3"